install_headers(
    'AccountSecurity.1.0.0.hpp',
    'Base.1.0.0.hpp',
    'Base.1.2.0.hpp',
    'Base.1.3.0.hpp',
    'Base.1.3.1.hpp',
    'Base.1.4.0.hpp',
    'Base.1.4.1.hpp',
    'Base.1.5.0.hpp',
    'Base.1.5.1.hpp',
    'Base.1.6.0.hpp',
    'Base.1.6.1.hpp',
    'Base.1.6.2.hpp',
    'Base.1.7.0.hpp',
    'Base.1.7.1.hpp',
    'Base.1.8.0.hpp',
    'Base.1.8.1.hpp',
    'Base.1.8.2.hpp',
    'Base.1.8.3.hpp',
    'Base.1.9.0.hpp',
    'Base.1.9.1.hpp',
    'Base.1.9.2.hpp',
    'Base.1.10.0.hpp',
    'Base.1.10.1.hpp',
    'Base.1.10.2.hpp',
    'Base.1.10.3.hpp',
    'Base.1.11.0.hpp',
    'Base.1.11.1.hpp',
    'Base.1.11.2.hpp',
    'Base.1.12.0.hpp',
    'Base.1.12.1.hpp',
    'Base.1.12.2.hpp',
    'Base.1.13.0.hpp',
    'Base.1.14.0.hpp',
    'Base.1.15.0.hpp',
    'Base.1.16.0.hpp',
    'Base.1.17.0.hpp',
    'Base.1.17.1.hpp',
    'Base.1.18.0.hpp',
    'Base.1.18.1.hpp',
    'Base.1.19.0.hpp',
    'Base.1.19.1.hpp',
    'Base.1.20.0.hpp',
    'Composition.1.0.0.hpp',
    'Composition.1.0.1.hpp',
    'Composition.1.1.0.hpp',
    'Composition.1.1.1.hpp',
    'Composition.1.1.2.hpp',
    'Environmental.1.0.0.hpp',
    'Environmental.1.0.1.hpp',
    'Environmental.1.1.0.hpp',
    'EthernetFabric.1.0.0.hpp',
    'EthernetFabric.1.0.1.hpp',
    'Fabric.1.0.0.hpp',
    'Fabric.1.0.1.hpp',
    'Fabric.1.0.2.hpp',
    'HeartbeatEvent.1.0.0.hpp',
    'HeartbeatEvent.1.0.1.hpp',
    'HeartbeatEvent.1.0.2.hpp',
    'HeartbeatEvent.1.1.0.hpp',
    'JobEvent.1.0.0.hpp',
    'JobEvent.1.0.1.hpp',
    'License.1.0.0.hpp',
    'License.1.0.1.hpp',
    'License.1.0.2.hpp',
    'License.1.0.3.hpp',
    'LogService.1.0.0.hpp',
    'LogService.1.0.1.hpp',
    'NetworkDevice.1.0.0.hpp',
    'NetworkDevice.1.0.1.hpp',
    'NetworkDevice.1.0.2.hpp',
    'NetworkDevice.1.0.3.hpp',
    'NetworkDevice.1.1.0.hpp',
    'Platform.1.0.0.hpp',
    'Platform.1.0.1.hpp',
    'Platform.1.1.0.hpp',
    'Platform.1.2.0.hpp',
    'Power.1.0.0.hpp',
    'Power.1.0.1.hpp',
    'ResourceEventRegistry.1.2.0.hpp',
    'ResourceEvent.1.0.1.hpp',
    'ResourceEvent.1.0.2.hpp',
    'ResourceEvent.1.0.3.hpp',
    'ResourceEvent.1.1.0.hpp',
    'ResourceEvent.1.1.1.hpp',
    'ResourceEvent.1.2.0.hpp',
    'ResourceEvent.1.2.1.hpp',
    'ResourceEvent.1.3.0.hpp',
    'ResourceEvent.1.3.1.hpp',
    'ResourceEvent.1.4.0.hpp',
    'ResourceEvent.1.4.1.hpp',
    'ResourceEvent.1.4.2.hpp',
    'SensorEvent.1.0.0.hpp',
    'SensorEvent.1.0.1.hpp',
    'ServiceCommunications.1.0.0.hpp',
    'StorageDevice.1.0.0.hpp',
    'StorageDevice.1.0.1.hpp',
    'StorageDevice.1.1.0.hpp',
    'StorageDevice.1.2.0.hpp',
    'StorageDevice.1.2.1.hpp',
    'StorageDevice.1.3.0.hpp',
    'StorageDevice.1.4.0.hpp',
    'TaskEvents.1.0.0.hpp',
    'TaskEvent.1.0.1.hpp',
    'TaskEvent.1.0.2.hpp',
    'TaskEvent.1.0.3.hpp',
    'TaskEvent.1.0.4.hpp',
    'Telemetry.1.0.0.hpp',
    'Update.1.0.0.hpp',
    'Update.1.0.1.hpp',
    'Update.1.0.2.hpp',
    'Update.1.1.0.hpp',
    'Update.1.1.1.hpp',
    subdir: 'phosphor-logging/message-registries'
)
